Fixed lost products with sections visible

--- a/resources/assets/scss/_variables.scss
+++ b/resources/assets/scss/_variables.scss
@@ -1,4 +1,4 @@
-$theme-color: hsl( /*random(359)*/ 200, 50%, 50% );
+$theme-color: hsl( /*random(359)*/ 80, 50%, 50% ); //200
 
 $top-row-height: 120px;
 
